--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Dojo - Ash's First Parcel App</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
   <body>
     <script src="./index.js"></script>
-    <h1>Hello</h1>
+    <h1>Welcome to the Dojo</h1>
   </body>
 </html>
