--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dojo - Ash's First Parcel App</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div id="root"></div>
     <script src="./index.js"></script>
-    <h1>Welcome to the Dojo</h1>
   </body>
 </html>
