--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Dojo - Ash's First Parcel App</title>
+    <title>The Dojo Project - A React Build Toolchain Tutorial</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
